@@ -1,3 +1,12 @@
+2003-09-15  Paul Eggert  <eggert@twinsun.com>
+
+	* lib/getndelim2.c (getndelim2): Don't trash errno when a read
+	fails, so that the caller gets the proper errno.
+
+	* readutmp.c (read_utmp): Likewise.
+	Check for fstat error.  Close stream and free storage
+	when failing.
+
 2003-09-14  Bruno Haible  <bruno@clisp.org>
 
 	* fwriteerror.h: New file.
